feat: update lesson model
