# services/api/docs/swagger.json
@@ -141,7 +141,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.UserCredentials"
                         }
                     }
                 ],
@@ -628,6 +628,60 @@
                 }
             }
         },
+        "/users/{user_id}/lessons": {
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "create or update score lesson",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Lesson",
+                        "name": "story",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UserLesson"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.UserLesson"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ValidationError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.InternalError"
+                        }
+                    }
+                }
+            }
+        },
         "/users/{user_id}/stories": {
             "post": {
                 "security": [
@@ -835,6 +889,41 @@
                 }
             }
         },
+        "models.Lesson": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "ipa": {
+                    "type": "string"
+                },
+                "practice_items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.PracticeItem"
+                    }
+                },
+                "type": {
+                    "$ref": "#/definitions/models.LessonType"
+                }
+            }
+        },
+        "models.LessonType": {
+            "type": "string",
+            "enum": [
+                "word",
+                "phrase",
+                "sentence",
+                "conversation"
+            ],
+            "x-enum-varnames": [
+                "WordType",
+                "PhraseType",
+                "SentenceType",
+                "ConversationType"
+            ]
+        },
         "models.PaginationMeta": {
             "type": "object",
             "properties": {
@@ -860,6 +949,23 @@
                 }
             }
         },
+        "models.PracticeItem": {
+            "type": "object",
+            "properties": {
+                "audio_url": {
+                    "type": "string"
+                },
+                "content": {
+                    "type": "string"
+                },
+                "transcript_ipa": {
+                    "type": "string"
+                },
+                "translation": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Sentence": {
             "type": "object",
             "properties": {
@@ -867,10 +973,10 @@
                     "type": "string"
                 },
                 "end": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "start": {
-                    "type": "integer"
+                    "type": "number"
                 }
             }
         },
@@ -945,8 +1051,7 @@
         "models.User": {
             "type": "object",
             "required": [
-                "email",
-                "username"
+                "email"
             ],
             "properties": {
                 "avatar": {
@@ -955,14 +1060,21 @@
                 "email": {
                     "type": "string"
                 },
-                "google_id": {
+                "lessons": {
+                    "description": "relations",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Lesson"
+                    }
+                },
+                "name": {
                     "type": "string"
                 },
-                "is_pay": {
-                    "type": "boolean"
-                },
-                "username": {
-                    "type": "string"
+                "stories": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Story"
+                    }
                 }
             }
         },
@@ -986,6 +1098,26 @@
             "type": "object",
             "properties": {
                 "vocabulary_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UserLesson": {
+            "type": "object",
+            "properties": {
+                "lesson": {
+                    "$ref": "#/definitions/models.Lesson"
+                },
+                "lesson_id": {
+                    "type": "string"
+                },
+                "score": {
+                    "type": "number"
+                },
+                "user": {
+                    "$ref": "#/definitions/models.User"
+                },
+                "user_id": {
                     "type": "string"
                 }
             }
@@ -1018,6 +1150,9 @@
                 "story_id": {
                     "type": "string"
                 },
+                "user": {
+                    "$ref": "#/definitions/models.User"
+                },
                 "user_id": {
                     "type": "string"
                 }
@@ -1030,10 +1165,10 @@
                     "type": "string"
                 },
                 "end": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "start": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "user_answers": {
                     "type": "array",
